--- a/ranges.yaml
+++ b/ranges.yaml
@@ -1,4 +1,21 @@
 ---
+# Ali Baba
+# Amazon
+# Apple
+# Facebook
+# Instagram
+# Microsoft
+# Netflix
+# Spotify
+# Tesla
+# Yahoo
+
+Atlassian:
+  # AS133530
+  - 103.233.242.0/24
+  - 104.192.136.0/21
+  - 185.166.140.0/22
+
 Google:
   # AS395973
   - 70.32.132.0/24
@@ -136,6 +153,38 @@ Google:
   - 216.58.192.0/19
   - 216.73.80.0/20
   - 216.239.32.0/19
+
+Twitter:
+  # AS35995
+  - 8.25.194.0/23
+  - 8.25.196.0/23
+  - 185.45.4.0/23
+  - 192.133.78.0/23
+  # AS13414
+  - 64.63.0.0/18
+  - 69.195.160.0/24
+  - 69.195.162.0/22
+  - 69.195.166.0/24
+  - 69.195.168.0/23
+  - 69.195.171.0/24
+  - 69.195.172.0/24
+  - 69.195.174.0/21
+  - 69.195.182.0/24
+  - 69.195.184.0/21
+  - 104.244.40.0/23
+  - 104.244.42.0/24
+  - 104.244.44.0/22
+  - 185.45.5.0/24
+  - 185.45.6.0/23
+  - 192.133.76.0/22
+  - 199.16.156.0/22
+  - 199.59.148.0/22
+  - 199.96.56.0/21
+  - 202.160.128.0/22
+  - 209.237.192.0/21
+  - 209.237.200.0/23
+  - 209.237.204.0/22
+  - 209.237.208.0/20
 
 YouTube:
   # AS36040
